--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 09:05:31 2018</p>
+         Last Run: Thu Jul 12 10:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>26</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
-                        <td>23</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>19</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -82,11 +82,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SE</td>
-                        <td>22</td>
+                        <td>SSE</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,7 +132,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "26",
                  "25",
                  "25",
                  "24",
@@ -145,7 +145,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "26",
                  "25",
                  "25",
                  "24",
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
                  "35",
+                 "34",
                  "33",
-                 "37",
-                 "43"
+                 "36",
+                 "42"
                ]
              },
              {
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "23",
+                 "15",
+                 "16",
                  "18",
-                 "19",
-                 "22"
+                 "23",
+                 "23"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 09:05:31 2018</p>
+         Last Run: Thu Jul 12 10:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,15 +268,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>6</td>
-                        <td>70</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>69</td>
+                        <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>64</td>
+                        <td>59</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -284,23 +284,23 @@
                         <td>14</td>
                         <td>14</td>
                         <td>3</td>
-                        <td>60</td>
+                        <td>59</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>67</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>0</td>
-                        <td>50</td>
+                        <td>49</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>65</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -308,11 +308,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>56</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -324,7 +324,7 @@
                         <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                   </tbody>
                </table>
@@ -372,7 +372,7 @@
                "data":[
                  "12",
                  "14",
-                 "16",
+                 "15",
                  "17",
                  "19"
                ]
@@ -385,7 +385,7 @@
                "data":[
                  "12",
                  "14",
-                 "16",
+                 "15",
                  "17",
                  "19"
                ]
@@ -440,7 +440,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
+                 "5",
                  "3",
                  "0",
                  "15",
@@ -452,10 +452,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "70",
-                 "60",
-                 "50",
-                 "43",
+                 "69",
+                 "59",
+                 "49",
+                 "42",
                  "38"
                ]
              },
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "59",
                  "64",
-                 "67",
-                 "65",
-                 "56",
-                 "53"
+                 "64",
+                 "55",
+                 "52"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 09:05:31 2018</p>
+         Last Run: Thu Jul 12 10:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -507,8 +507,8 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
                         <td>54</td>
                         <td>2</td>
@@ -608,7 +608,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
                  "19",
                  "21",
@@ -621,7 +621,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
                  "19",
                  "21",
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 09:05:31 2018</p>
+         Last Run: Thu Jul 12 10:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,7 +748,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>28</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -762,9 +762,9 @@
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>SE</td>
-                        <td>18</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -775,8 +775,8 @@
                         <td>35</td>
                         <td>0</td>
                         <td>16</td>
-                        <td>ESE</td>
-                        <td>23</td>
+                        <td>SE</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -894,7 +894,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
+                 "28",
                  "30",
                  "35"
                ]
@@ -905,8 +905,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "18",
-                 "23"
+                 "14",
+                 "20"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 09:05:31 2018</p>
+         Last Run: Thu Jul 12 10:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
