--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 10:05:27 2018</p>
+         Last Run: Thu Jul 12 11:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>26</td>
-                        <td>26</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -132,7 +132,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "26",
+                 "25",
                  "25",
                  "25",
                  "24",
@@ -145,7 +145,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "26",
+                 "25",
                  "25",
                  "25",
                  "24",
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "34",
                  "33",
                  "36",
@@ -226,7 +226,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15",
+                 "16",
                  "16",
                  "18",
                  "23",
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 10:05:27 2018</p>
+         Last Run: Thu Jul 12 11:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 10:05:27 2018</p>
+         Last Run: Thu Jul 12 11:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -524,7 +524,7 @@
                         <td>0</td>
                         <td>47</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>S</td>
                         <td>5</td>
                      </tr>
@@ -536,7 +536,7 @@
                         <td>0</td>
                         <td>42</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
                         <td>11</td>
                      </tr>
@@ -562,7 +562,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>SE</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -690,7 +690,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "47",
                  "42",
                  "39",
@@ -706,7 +706,7 @@
                  "5",
                  "11",
                  "15",
-                 "15"
+                 "14"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 10:05:27 2018</p>
+         Last Run: Thu Jul 12 11:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -764,7 +764,7 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -776,7 +776,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>20</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -905,8 +905,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "14",
-                 "20"
+                 "16",
+                 "22"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 10:05:27 2018</p>
+         Last Run: Thu Jul 12 11:05:27 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,10 +945,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>24</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
@@ -960,7 +960,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>24</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
@@ -975,7 +975,7 @@
                         <td>50</td>
                         <td>0</td>
                         <td>14</td>
-                        <td>E</td>
+                        <td>ENE</td>
                         <td>51</td>
                      </tr>
                   </tbody>
@@ -1020,7 +1020,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
+                 "25",
                  "23",
                  "21"
                ]
@@ -1031,7 +1031,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
+                 "25",
                  "23",
                  "21"
                ]
@@ -1094,8 +1094,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
-                 "43",
+                 "37",
+                 "42",
                  "50"
                ]
              },
