--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 11:05:27 2018</p>
+         Last Run: Thu Jul 12 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -31,10 +31,10 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>26</td>
+                        <td>26</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -46,11 +46,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>2</td>
-                        <td>8</td>
-                        <td>S</td>
-                        <td>16</td>
+                        <td>10</td>
+                        <td>SSE</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>18</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>24</td>
                      </tr>
                   </tbody>
                </table>
@@ -132,7 +132,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
+                 "26",
                  "25",
                  "25",
                  "24",
@@ -145,7 +145,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
+                 "26",
                  "25",
                  "25",
                  "24",
@@ -214,8 +214,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "34",
+                 "33",
+                 "33",
                  "33",
                  "36",
                  "42"
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "16",
-                 "16",
-                 "18",
-                 "23",
-                 "23"
+                 "20",
+                 "22",
+                 "25",
+                 "24"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 11:05:27 2018</p>
+         Last Run: Thu Jul 12 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,8 +271,8 @@
                         <td>Partly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>5</td>
-                        <td>69</td>
+                        <td>3</td>
+                        <td>70</td>
                         <td>3</td>
                         <td>16</td>
                         <td>NNW</td>
@@ -283,8 +283,8 @@
                         <td>Mostly Cloudy</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>3</td>
-                        <td>59</td>
+                        <td>2</td>
+                        <td>58</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
@@ -296,11 +296,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>64</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -312,7 +312,7 @@
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>55</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -320,11 +320,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>38</td>
-                        <td>6</td>
+                        <td>37</td>
+                        <td>7</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>52</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -440,8 +440,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
                  "3",
+                 "2",
                  "0",
                  "15",
                  "15"
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "69",
-                 "59",
-                 "49",
+                 "70",
+                 "58",
+                 "48",
                  "42",
-                 "38"
+                 "37"
                ]
              },
              {
@@ -466,9 +466,9 @@
                "data":[
                  "59",
                  "64",
-                 "64",
-                 "55",
-                 "52"
+                 "63",
+                 "52",
+                 "49"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 11:05:27 2018</p>
+         Last Run: Thu Jul 12 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -531,10 +531,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>4</td>
                         <td>10</td>
                         <td>SSE</td>
@@ -546,9 +546,9 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
                         <td>15</td>
                      </tr>
@@ -560,9 +560,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SE</td>
-                        <td>14</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -610,7 +610,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -623,7 +623,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -692,8 +692,8 @@
                "data":[
                  "55",
                  "47",
-                 "42",
-                 "39",
+                 "43",
+                 "38",
                  "35"
                ]
              },
@@ -706,7 +706,7 @@
                  "5",
                  "11",
                  "15",
-                 "14"
+                 "13"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 11:05:27 2018</p>
+         Last Run: Thu Jul 12 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,7 +748,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>28</td>
+                        <td>27</td>
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
@@ -764,19 +764,19 @@
                         <td>1</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -822,7 +822,7 @@
                "data":[
                  "27",
                  "26",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -833,7 +833,7 @@
                "data":[
                  "27",
                  "26",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -894,7 +894,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "28",
+                 "27",
                  "30",
                  "35"
                ]
@@ -905,8 +905,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
-                 "16",
-                 "22"
+                 "17",
+                 "23"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 11:05:27 2018</p>
+         Last Run: Thu Jul 12 12:05:19 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -960,19 +960,19 @@
                         <td>23</td>
                         <td>23</td>
                         <td>24</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>44</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>40</td>
-                        <td>50</td>
+                        <td>41</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ENE</td>
@@ -1086,7 +1086,7 @@
                "data":[
                  "24",
                  "24",
-                 "40"
+                 "41"
                ]
              },
              {
@@ -1095,8 +1095,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "37",
-                 "42",
-                 "50"
+                 "41",
+                 "49"
                ]
              },
              {
@@ -1105,7 +1105,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "31",
-                 "44",
+                 "43",
                  "51"
                ]
              }
